--- a/btn-v2-L1.html
+++ b/btn-v2-L1.html
@@ -26,7 +26,7 @@ var yb_id = gVar()["v"];
 
 if (yb_id) {
 	var body = `<div style="width:100%;margin-bottom:20px;max-height:40px;overflow:hidden">
-			<iframe src="//ytmp3.mobi/button-api/#`+yb_id+`|mp3" style="border: 0; top:0; left:0; right:0; bottom:0; width:100%; height:100%" scrolling="no" FRAMEBORDER="0"></iframe>
+			<iframe src="https://ytmp3.mobi/button-api/#`+yb_id+`|mp3" style="border: 0; top:0; left:0; right:0; bottom:0; width:100%; height:100%" scrolling="no" FRAMEBORDER="0"></iframe>
 		</div>`;
     document.write(body);
 }
